--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -1,36 +1,8 @@
-<style>
-    /* This style hides the authenticated content by default */
-    .header {
-        display: none;
-    }
-</style>
-
-<!-- The menu is guarded by class header, it is only displayed when user is authenticated -->
-<div id="authenticatedContent" class="header">
-    <table>
-        <tr>       
-            <td>
-                <a href="{{ site.baseurl }}/">
-                    <img src="{{ site.baseurl }}/images/logo.png" height="60" alt="">
-                </a>
-            </td>
-            <td><a href="{{site.baseurl}}/profile">Profile</a></td>
-            <td><a href="{{site.baseurl}}/post">Posts</a></td>
-            <td><a href="{{site.baseurl}}/logout">Logout</a></td>
-        </tr>
-    </table>
-</div>
-
-<script>
-    /**
-     * This script checks if the user is authenticated.
-     * If the user is authenticated, the 'header' class is removed from the authenticated content,
-     * making it visible.
-     */
-    document.addEventListener('DOMContentLoaded', function() {
-        const isAuthenticated = localStorage.getItem('authenticated') === 'true';
-        if (isAuthenticated) {
-            document.getElementById('authenticatedContent').classList.remove('header');
-        }
-    });
-</script>
+<table>
+    <tr>
+        <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Tools" alt=""></td>
+        <td><a href="{{site.baseurl}}/">Home</a></td>
+        <td><a href="{{site.baseurl}}/bigidea3">BigIdea3 Team Teach</a></td>
+        <td><a href="{{site.baseurl}}/bigidea5">BigIdea5 Team Teach</a></td>
+    </tr>
+</table>
