--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -2,7 +2,6 @@
     <tr>
         <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Tools" alt=""></td>
         <td><a href="{{site.baseurl}}/">Home</a></td>
-        <td><a href="{{site.baseurl}}/bigidea3">BigIdea3 Team Teach</a></td>
-        <td><a href="{{site.baseurl}}/bigidea5">BigIdea5 Team Teach</a></td>
+        <td><a href="{{site.baseurl}}/TeamTeach/">TeamTeach</a></td>
     </tr>
 </table>
