--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -3,5 +3,7 @@
         <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Tools" alt=""></td>
         <td><a href="{{site.baseurl}}/">Home</a></td>
         <td><a href="{{site.baseurl}}/TeamTeach/">TeamTeach</a></td>
+        <td><a href="{{site.baseurl}}/teach/bigidea">TeamTeach 3</a></td>
+
     </tr>
 </table>
