--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -2,8 +2,9 @@
     <tr>
         <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Tools" alt=""></td>
         <td><a href="{{site.baseurl}}/">Home</a></td>
-        <td><a href="{{site.baseurl}}/TeamTeach/">TeamTeach</a></td>
-        <td><a href="{{site.baseurl}}/teach/bigidea">TeamTeach 3</a></td>
+        <td><a href="{{site.baseurl}}/teach/bigidea5">TeamTeach 5</a></td>
+        <td><a href="{{site.baseurl}}/teach/bigidea3">TeamTeach 3</a></td>
+
 
     </tr>
 </table>
